--- a/UnitTestCore/UnitTestCore.csproj
+++ b/UnitTestCore/UnitTestCore.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="UnitTestSql.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
