--- a/CoreLib/CoreLib.csproj
+++ b/CoreLib/CoreLib.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.112.1" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.112.0" />
   </ItemGroup>
 
 </Project>
